# tds-virtual-ta-project-1-22f3000668

./: .gitignore  .replit  DEPLOYMENT_GUIDE.md  README.md  VERCEL_DEPLOY_GUIDE.md  ai_assistant_simple.py  api.py  app.py  main.py  pyproject.toml  replit.md  scraper.py
.config/.semgrep/: settings.yml
instance/: tds_virtual_ta.db
