[project]
name = "tds-virtual-ta"
version = "0.1.0"
description = "TDS Virtual Teaching Assistant API"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openai>=1.86.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.0",
    "trafilatura>=2.0.0",
    "werkzeug>=3.0.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
    "numpy>=1.24.0",
]